@@ -361,7 +361,6 @@ text \<open>
 Usage: isabelle_process [OPTIONS] [INPUT] [OUTPUT]
 
   Options are:
-    -I           startup Isar interaction mode
     -O           system options from given YXML file
     -S           secure mode -- disallow critical operations
     -T ADDR      startup process wrapper, with socket address
@@ -433,9 +432,6 @@ text \<open>
   Alternatively, option @{verbatim "-O"} specifies the full environment of
   system options as a file in YXML format (according to the Isabelle/Scala
   function @{verbatim isabelle.Options.encode}).
-
-  \medskip The @{verbatim "-I"} option makes Isabelle enter Isar
-  interaction mode on startup, instead of the primitive ML top-level.
 
   \medskip The @{verbatim "-T"} or @{verbatim "-W"} option makes
   Isabelle enter a special process wrapper for interaction via
